QLowEnergyAdvertisingData: rework the note about advertising limitations

Long notes are usually hard to read, so convert it into a proper
section.
Also, explicitly mention that the advertising might fail to start if
the data exceeds the limit. Previously it was mentioned only for
Android, but that's also relevant for other backends.

Fixes: QTBUG-133534
Change-Id: I4072a54be8888ccb3d70bfa28daa78192ad36317
Reviewed-by: Juha Vuolle <juha.vuolle@qt.io>
Reviewed-by: Nicholas Bennett <nicholas.bennett@qt.io>
(cherry picked from commit 6b011b61f3c27d753dd7dc77640cdabd207549d0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2803507ee271f9b48ac83e84939dc73788ff6ed8)
(cherry picked from commit 1a93b93bf1b79b31418631cd3e6ea47d85bbf56f)